[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Born2bSportyV2.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Textbox.gd" type="Script" id=2]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/frames/wizzard_f_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/frames/wizzard_f_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/frames/wizzard_f_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/frames/wizzard_f_idle_anim_f3.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.27451, 0.305882, 0.380392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Textbox" type="CanvasLayer"]
visible = false
script = ExtResource( 2 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -117.0
margin_right = -32.0
margin_bottom = -24.0

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 960.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 960.0
margin_bottom = 93.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 85.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 85.0

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_top = 31.0
margin_right = 30.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextboxContainer/MarginContainer/HBoxContainer"]
position = Vector2( 16, 32 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "*"

[node name="Label2" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 932.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 936.0
margin_top = 42.0
margin_right = 944.0
margin_bottom = 77.0
rect_min_size = Vector2( 8, 0 )
size_flags_vertical = 8
custom_fonts/font = ExtResource( 1 )
text = "
"

[node name="Tween" type="Tween" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_Textbox_visibility_changed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
